tests/negative/abilities/call_outside_ability.orng
// call_outside_context.orng:8:14: error: missing ability `My_Ability`
//     get_four()
//             ^
// 
ability My_Ability = Int

fn main() -> Int {
    get_four()
}

fn get_four() -> Int with My_Ability {
    My_Ability
}